@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: PTYTextView.h,v 1.26 2003-05-13 15:32:58 ujwal Exp $
+// $Id: PTYTextView.h,v 1.27 2003-05-13 20:25:17 ujwal Exp $
 //
 /*
  **  PTYTextView.h
@@ -212,6 +212,9 @@
     // data source
     id dataSource;
     int numberOfLines;
+
+    // last search location
+    unsigned int lastSearchLocation;
 }
 
 - (id)init;
@@ -277,7 +280,9 @@
 - (IBAction) findPrevious: (id) sender;
 - (IBAction) findWithSelection: (id) sender;
 - (IBAction) jumpToSelection: (id) sender;
+- (void) findSubString: (NSString *) subString forwardDirection: (BOOL) direction ignoringCase: (BOOL) caseCheck;
 - (void) setSearchString: (NSString *) aString;
+- (void) setIgnoreCase: (BOOL) flag;
 @end
 
 
